# gateway

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci-sandbox.yml  pre-release-main.yml  release-main.yml
src/: lib.rs  main.rs
src/budget/: mod.rs
src/category/: mod.rs
src/entry/: mod.rs
src/identity/: mod.rs
src/media/: mod.rs
src/middleware/: mod.rs
src/proxy/: mod.rs
src/sharing/: mod.rs
src/swagger/: mod.rs
src/swagger/specs/: identity.json  media.json
tests/: proxy_test.rs  swagger_test.rs
