[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tower = "0.4"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost", "transport"] }
prost = "0.13"
